--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,19 @@
     <title>{{ title }}</title>
     </head>
     <body>
+
         <h1>Миссия Колонизация Марса</h1>
         <br>
+        <nav><a>
+            {% if current_user.is_authenticated %}
+                <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
+            {% else %}
+                <a>
+                    <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
+                    <a class="btn btn-success" href="/login">Войти</a>
+                </a>
+            {% endif %}
+        </a></nav>
         <h4>И на Марсе будут яблони цвести!</h4>
          {% block content %}{% endblock content %}
     </body>
