--- a/static/style/style.css
+++ b/static/style/style.css
@@ -10,3 +10,24 @@ form {
    background: url('https://yastatic.net/s3/lyceum/content/images/second-year/web/MARS-2-7.png') no-repeat;
    padding-left: 155px;
 }
+.post{
+    border: 2px solid black;
+    border-radius: 10px;
+}
+#news{
+    max-width: 60%;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+.private{
+    color: rgb(100, 100, 180);
+    display:inline-block;
+}
+h2, .buttons, table {
+    margin-left: 2%;
+    margin-right: 2%;
+}
+.forms{
+    margin-left: 10%;
+    margin-right: 10%;
+}
