--- a/templates/base.html
+++ b/templates/base.html
@@ -6,10 +6,10 @@
                     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
                     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
                     crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/style.css') }}" />
     <title>{{ title }}</title>
     </head>
     <body>
-
         <h1>Миссия Колонизация Марса</h1>
         <br>
         <nav><a>
